Begin adding cells to table

--- a/index.html
+++ b/index.html
@@ -11,6 +11,59 @@
 
 <body>
 
+    <h1>Planets data</h1>
+    <p>Data about the planets of our solar system (Planetary facts taken from <a href="#" target="_blank">Nasa's
+            Planetary Fact Sheet - Metric)</a>.</p>
+
+    <table>
+        <colgroup>
+            <col>
+            <col style="border: 1px solid black">
+        </colgroup>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Mass</th>
+                <th>Diameter</th>
+                <th>Density</th>
+                <th>Gravity</th>
+                <th>Length of day</th>
+                <th>Distance from sun</th>
+                <th>Mean temperature</th>
+                <th>Number of moons</th>
+                <th>Notes</th>
+            </tr>
+
+            <tr>
+                <th rowspan="2">Terrestrial planets</th>
+                <td>Mercury</td>
+                <td>.330</td>
+                <td>4,879</td>
+                <td>5427</td>
+                <td>3.7</td>
+                <td>4222.6</td>
+                <td>57.9</td>
+                <td>167</td>
+                <td>0</td>
+                <td>Cloeset to the Sun</td>
+            </tr>
+
+            <tr>
+                <td>Venus</td>
+                <td>4.87</td>
+                <td>12,104</td>
+                <td>5243</td>
+                <td>8.9</td>
+                <td>2802.0</td>
+                <td>108.2</td>
+                <td>464</td>
+                <td>0</td>
+                <td></td>
+            </tr>
+        </thead>
+    </table>
+
 </body>
 
 </html>
